opam-version: "2.0"
name: "autosubst"
version: "0.1"
synopsis: "OCaml implementation of Autosubst"
description: """
    Autosubst can be used to generate Coq boilerplate code for syntax with binders.
"""
homepage: "https://github.com/uds-psl/autosubst-ocaml"
bug-reports: "https://github.com/uds-psl/autosubst-ocaml/issues"
maintainer: "Adrian Dapprich s8addapp@stud.uni-saarland.de"
authors: [ "Adrian Dapprich s8addapp@stud.uni-saarland.de" ]
license: "MIT"

depends: [
    "ocaml" { >= "4.09" }
    "coq" { >= "8.13" }
    "angstrom" { >= "0.15.0" }
    "dune" { >= "2.0" }
    "ocamlgraph" { >= "2.0.0" }
    "ppx_deriving" { >= "5.2.1" }
]
build: [ "dune" "build" "-p" name "-j" jobs ]